--- a/arch/arm/configs/u8815_defconfig
+++ b/arch/arm/configs/u8815_defconfig
@@ -463,11 +463,13 @@ CONFIG_MSM_RMT_STORAGE_CLIENT=y
 # CONFIG_MSM_RMT_STORAGE_CLIENT_STATS is not set
 CONFIG_MSM_DALRPC=y
 CONFIG_MSM_DALRPC_TEST=m
-# CONFIG_MSM_CPU_FREQ_SET_MIN_MAX is not set
+CONFIG_MSM_CPU_FREQ_SET_MIN_MAX=y
+CONFIG_MSM_CPU_FREQ_MAX=1008000
+CONFIG_MSM_CPU_FREQ_MIN=245760
 # CONFIG_CHIL360_OC is not set
-# CONFIG_CHIL360_RAM_STOCK is not set
+CONFIG_CHIL360_RAM_STOCK=y
 # CONFIG_CHIL360_RAM_MEDIUM is not set
-CONFIG_CHIL360_RAM_HIGH=y
+# CONFIG_CHIL360_RAM_HIGH is not set
 # CONFIG_CHIL360_RAM_EXTRA_HIGH is not set
 # CONFIG_MSM_AVS_HW is not set
 # CONFIG_MSM_HW3D is not set
